pyopath/AST/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> path
Rule 1     path -> Expr
Rule 2     Expr -> ExprList
Rule 3     ExprList -> ExprSingle
Rule 4     ExprList -> ExprList , ExprSingle
Rule 5     ExprSingle -> OrExpr
Rule 6     OrExpr -> AndExpr OR AndExpr
Rule 7     OrExpr -> AndExpr
Rule 8     AndExpr -> ComparisonExpr AND ComparisonExpr
Rule 9     AndExpr -> ComparisonExpr
Rule 10    ComparisonExpr -> AdditiveExpr ValueComp AdditiveExpr
Rule 11    ComparisonExpr -> AdditiveExpr NodeComp AdditiveExpr
Rule 12    ComparisonExpr -> AdditiveExpr
Rule 13    ValueComp -> EQstr
Rule 14    ValueComp -> NEstr
Rule 15    ValueComp -> LTstr
Rule 16    ValueComp -> LEstr
Rule 17    ValueComp -> GTstr
Rule 18    ValueComp -> GEstr
Rule 19    ValueComp -> EQsym
Rule 20    ValueComp -> NEsym
Rule 21    ValueComp -> LTsym
Rule 22    ValueComp -> LEsym
Rule 23    ValueComp -> GTsym
Rule 24    ValueComp -> GEsym
Rule 25    NodeComp -> IS
Rule 26    AdditiveExpr -> MultiplicativeExpr + MultiplicativeExpr
Rule 27    AdditiveExpr -> MultiplicativeExpr - MultiplicativeExpr
Rule 28    AdditiveExpr -> MultiplicativeExpr
Rule 29    MultiplicativeExpr -> UnionExpr * UnionExpr
Rule 30    MultiplicativeExpr -> UnionExpr DIV UnionExpr
Rule 31    MultiplicativeExpr -> UnionExpr IDIV UnionExpr
Rule 32    MultiplicativeExpr -> UnionExpr MOD UnionExpr
Rule 33    MultiplicativeExpr -> UnionExpr
Rule 34    UnionExpr -> IntersectExceptExpr UNION IntersectExceptExpr
Rule 35    UnionExpr -> IntersectExceptExpr | IntersectExceptExpr
Rule 36    UnionExpr -> IntersectExceptExpr
Rule 37    IntersectExceptExpr -> UnaryExpr INTERSECT UnaryExpr
Rule 38    IntersectExceptExpr -> UnaryExpr EXCEPT UnaryExpr
Rule 39    IntersectExceptExpr -> UnaryExpr
Rule 40    UnaryExpr -> + ValueExpr
Rule 41    UnaryExpr -> - ValueExpr
Rule 42    UnaryExpr -> ValueExpr
Rule 43    ValueExpr -> SLASH RelativePathExpr
Rule 44    ValueExpr -> SLASH
Rule 45    ValueExpr -> DOUBLESLASH RelativePathExpr
Rule 46    ValueExpr -> RelativePathExpr
Rule 47    RelativePathExpr -> StepExpr SLASH StepExpr
Rule 48    RelativePathExpr -> StepExpr DOUBLESLASH StepExpr
Rule 49    RelativePathExpr -> StepExpr
Rule 50    StepExpr -> PostfixExpr
Rule 51    StepExpr -> AxisStep
Rule 52    PostfixExpr -> PrimaryExpr Predicate
Rule 53    PostfixExpr -> PrimaryExpr
Rule 54    AxisStep -> ReverseStep PredicateList
Rule 55    AxisStep -> ForwardStep PredicateList
Rule 56    PredicateList -> Predicate PredicateList
Rule 57    PredicateList -> Predicate
Rule 58    PredicateList -> <empty>
Rule 59    Predicate -> [ Expr ]
Rule 60    ReverseStep -> ReverseAxis NodeTest
Rule 61    ReverseStep -> AbbrevReverseStep
Rule 62    ReverseAxis -> PARENT AXIS
Rule 63    ReverseAxis -> ANCESTOR AXIS
Rule 64    ReverseAxis -> PRECEDING_SIBLING AXIS
Rule 65    ReverseAxis -> PRECEDING AXIS
Rule 66    ReverseAxis -> ANCESTOR_OR_SELF AXIS
Rule 67    AbbrevReverseStep -> DOUBLEDOT
Rule 68    ForwardStep -> ForwardAxis NodeTest
Rule 69    ForwardStep -> AbbrevForwardStep
Rule 70    ForwardAxis -> CHILD AXIS
Rule 71    ForwardAxis -> DESCENDANT AXIS
Rule 72    ForwardAxis -> ATTRIBUTE AXIS
Rule 73    ForwardAxis -> SELF AXIS
Rule 74    ForwardAxis -> DESCENDANT_OR_SELF AXIS
Rule 75    ForwardAxis -> FOLLOWING_SIBLING AXIS
Rule 76    ForwardAxis -> FOLLOWING AXIS
Rule 77    ForwardAxis -> NAMESPACE AXIS
Rule 78    AbbrevForwardStep -> @ NodeTest
Rule 79    AbbrevForwardStep -> NodeTest
Rule 80    NodeTest -> KindTest
Rule 81    NodeTest -> NameTest
Rule 82    KindTest -> ElementTest
Rule 83    KindTest -> AttributeTest
Rule 84    KindTest -> AnyKindTest
Rule 85    ElementTest -> ELEMENT ( ElementNameOrWildcard )
Rule 86    ElementTest -> ELEMENT ( )
Rule 87    ElementNameOrWildcard -> ElementName
Rule 88    ElementNameOrWildcard -> *
Rule 89    ElementName -> EQNAME
Rule 90    AttributeTest -> ATTRIBUTE ( AttributeNameOrWildcard )
Rule 91    AttributeTest -> ATTRIBUTE ( )
Rule 92    AttributeNameOrWildcard -> AttributeName
Rule 93    AttributeNameOrWildcard -> *
Rule 94    AttributeName -> EQNAME
Rule 95    AnyKindTest -> NODE ( )
Rule 96    NameTest -> EQNAME
Rule 97    NameTest -> *
Rule 98    PrimaryExpr -> Literal
Rule 99    PrimaryExpr -> VarRef
Rule 100   PrimaryExpr -> ParenthesizedExpr
Rule 101   PrimaryExpr -> CONTEXT
Rule 102   PrimaryExpr -> FunctionCall
Rule 103   Literal -> STRING
Rule 104   Literal -> NUMBER
Rule 105   VarRef -> $ VarName
Rule 106   VarName -> EQNAME
Rule 107   ParenthesizedExpr -> ( )
Rule 108   ParenthesizedExpr -> ( Expr )
Rule 109   FunctionCall -> EQNAME ArgumentList
Rule 110   ArgumentList -> ( )
Rule 111   ArgumentList -> ( ArgumentExpr )
Rule 112   ArgumentExpr -> Argument , Argument
Rule 113   ArgumentExpr -> Argument
Rule 114   Argument -> Expr

Terminals, with rules where they appear

$                    : 105
(                    : 85 86 90 91 95 107 108 110 111
)                    : 85 86 90 91 95 107 108 110 111
*                    : 29 88 93 97
+                    : 26 40
,                    : 4 112
-                    : 27 41
@                    : 78
ANCESTOR             : 63
ANCESTOR_OR_SELF     : 66
AND                  : 8
ATTRIBUTE            : 72 90 91
AXIS                 : 62 63 64 65 66 70 71 72 73 74 75 76 77
CHILD                : 70
CONTEXT              : 101
DESCENDANT           : 71
DESCENDANT_OR_SELF   : 74
DIV                  : 30
DOUBLEDOT            : 67
DOUBLESLASH          : 45 48
ELEMENT              : 85 86
EQNAME               : 89 94 96 106 109
EQstr                : 13
EQsym                : 19
EXCEPT               : 38
FOLLOWING            : 76
FOLLOWING_SIBLING    : 75
GEstr                : 18
GEsym                : 24
GTstr                : 17
GTsym                : 23
IDIV                 : 31
INTERSECT            : 37
IS                   : 25
LEstr                : 16
LEsym                : 22
LTstr                : 15
LTsym                : 21
MOD                  : 32
NAMESPACE            : 77
NEstr                : 14
NEsym                : 20
NODE                 : 95
NUMBER               : 104
OR                   : 6
PARENT               : 62
PRECEDING            : 65
PRECEDING_SIBLING    : 64
SELF                 : 73
SLASH                : 43 44 47
STRING               : 103
UNION                : 34
[                    : 59
]                    : 59
error                : 
|                    : 35

Nonterminals, with rules where they appear

AbbrevForwardStep    : 69
AbbrevReverseStep    : 61
AdditiveExpr         : 10 10 11 11 12
AndExpr              : 6 6 7
AnyKindTest          : 84
Argument             : 112 112 113
ArgumentExpr         : 111
ArgumentList         : 109
AttributeName        : 92
AttributeNameOrWildcard : 90
AttributeTest        : 83
AxisStep             : 51
ComparisonExpr       : 8 8 9
ElementName          : 87
ElementNameOrWildcard : 85
ElementTest          : 82
Expr                 : 1 59 108 114
ExprList             : 2 4
ExprSingle           : 3 4
ForwardAxis          : 68
ForwardStep          : 55
FunctionCall         : 102
IntersectExceptExpr  : 34 34 35 35 36
KindTest             : 80
Literal              : 98
MultiplicativeExpr   : 26 26 27 27 28
NameTest             : 81
NodeComp             : 11
NodeTest             : 60 68 78 79
OrExpr               : 5
ParenthesizedExpr    : 100
PostfixExpr          : 50
Predicate            : 52 56 57
PredicateList        : 54 55 56
PrimaryExpr          : 52 53
RelativePathExpr     : 43 45 46
ReverseAxis          : 60
ReverseStep          : 54
StepExpr             : 47 47 48 48 49
UnaryExpr            : 37 37 38 38 39
UnionExpr            : 29 29 30 30 31 31 32 32 33
ValueComp            : 10
ValueExpr            : 40 41 42
VarName              : 105
VarRef               : 99
path                 : 0

Parsing method: LALR

state 0

    (0) S' -> . path
    (1) path -> . Expr
    (2) Expr -> . ExprList
    (3) ExprList -> . ExprSingle
    (4) ExprList -> . ExprList , ExprSingle
    (5) ExprSingle -> . OrExpr
    (6) OrExpr -> . AndExpr OR AndExpr
    (7) OrExpr -> . AndExpr
    (8) AndExpr -> . ComparisonExpr AND ComparisonExpr
    (9) AndExpr -> . ComparisonExpr
    (10) ComparisonExpr -> . AdditiveExpr ValueComp AdditiveExpr
    (11) ComparisonExpr -> . AdditiveExpr NodeComp AdditiveExpr
    (12) ComparisonExpr -> . AdditiveExpr
    (26) AdditiveExpr -> . MultiplicativeExpr + MultiplicativeExpr
    (27) AdditiveExpr -> . MultiplicativeExpr - MultiplicativeExpr
    (28) AdditiveExpr -> . MultiplicativeExpr
    (29) MultiplicativeExpr -> . UnionExpr * UnionExpr
    (30) MultiplicativeExpr -> . UnionExpr DIV UnionExpr
    (31) MultiplicativeExpr -> . UnionExpr IDIV UnionExpr
    (32) MultiplicativeExpr -> . UnionExpr MOD UnionExpr
    (33) MultiplicativeExpr -> . UnionExpr
    (34) UnionExpr -> . IntersectExceptExpr UNION IntersectExceptExpr
    (35) UnionExpr -> . IntersectExceptExpr | IntersectExceptExpr
    (36) UnionExpr -> . IntersectExceptExpr
    (37) IntersectExceptExpr -> . UnaryExpr INTERSECT UnaryExpr
    (38) IntersectExceptExpr -> . UnaryExpr EXCEPT UnaryExpr
    (39) IntersectExceptExpr -> . UnaryExpr
    (40) UnaryExpr -> . + ValueExpr
    (41) UnaryExpr -> . - ValueExpr
    (42) UnaryExpr -> . ValueExpr
    (43) ValueExpr -> . SLASH RelativePathExpr
    (44) ValueExpr -> . SLASH
    (45) ValueExpr -> . DOUBLESLASH RelativePathExpr
    (46) ValueExpr -> . RelativePathExpr
    (47) RelativePathExpr -> . StepExpr SLASH StepExpr
    (48) RelativePathExpr -> . StepExpr DOUBLESLASH StepExpr
    (49) RelativePathExpr -> . StepExpr
    (50) StepExpr -> . PostfixExpr
    (51) StepExpr -> . AxisStep
    (52) PostfixExpr -> . PrimaryExpr Predicate
    (53) PostfixExpr -> . PrimaryExpr
    (54) AxisStep -> . ReverseStep PredicateList
    (55) AxisStep -> . ForwardStep PredicateList
    (98) PrimaryExpr -> . Literal
    (99) PrimaryExpr -> . VarRef
    (100) PrimaryExpr -> . ParenthesizedExpr
    (101) PrimaryExpr -> . CONTEXT
    (102) PrimaryExpr -> . FunctionCall
    (60) ReverseStep -> . ReverseAxis NodeTest
    (61) ReverseStep -> . AbbrevReverseStep
    (68) ForwardStep -> . ForwardAxis NodeTest
    (69) ForwardStep -> . AbbrevForwardStep
    (103) Literal -> . STRING
    (104) Literal -> . NUMBER
    (105) VarRef -> . $ VarName
    (107) ParenthesizedExpr -> . ( )
    (108) ParenthesizedExpr -> . ( Expr )
    (109) FunctionCall -> . EQNAME ArgumentList
    (62) ReverseAxis -> . PARENT AXIS
    (63) ReverseAxis -> . ANCESTOR AXIS
    (64) ReverseAxis -> . PRECEDING_SIBLING AXIS
    (65) ReverseAxis -> . PRECEDING AXIS
    (66) ReverseAxis -> . ANCESTOR_OR_SELF AXIS
    (67) AbbrevReverseStep -> . DOUBLEDOT
    (70) ForwardAxis -> . CHILD AXIS
    (71) ForwardAxis -> . DESCENDANT AXIS
    (72) ForwardAxis -> . ATTRIBUTE AXIS
    (73) ForwardAxis -> . SELF AXIS
    (74) ForwardAxis -> . DESCENDANT_OR_SELF AXIS
    (75) ForwardAxis -> . FOLLOWING_SIBLING AXIS
    (76) ForwardAxis -> . FOLLOWING AXIS
    (77) ForwardAxis -> . NAMESPACE AXIS
    (78) AbbrevForwardStep -> . @ NodeTest
    (79) AbbrevForwardStep -> . NodeTest
    (80) NodeTest -> . KindTest
    (81) NodeTest -> . NameTest
    (82) KindTest -> . ElementTest
    (83) KindTest -> . AttributeTest
    (84) KindTest -> . AnyKindTest
    (96) NameTest -> . EQNAME
    (97) NameTest -> . *
    (85) ElementTest -> . ELEMENT ( ElementNameOrWildcard )
    (86) ElementTest -> . ELEMENT ( )
    (90) AttributeTest -> . ATTRIBUTE ( AttributeNameOrWildcard )
    (91) AttributeTest -> . ATTRIBUTE ( )
    (95) AnyKindTest -> . NODE ( )

    +               shift and go to state 10
    -               shift and go to state 11
    SLASH           shift and go to state 17
    DOUBLESLASH     shift and go to state 19
    CONTEXT         shift and go to state 29
    STRING          shift and go to state 36
    NUMBER          shift and go to state 37
    $               shift and go to state 38
    (               shift and go to state 39
    EQNAME          shift and go to state 40
    PARENT          shift and go to state 41
    ANCESTOR        shift and go to state 42
    PRECEDING_SIBLING shift and go to state 43
    PRECEDING       shift and go to state 44
    ANCESTOR_OR_SELF shift and go to state 45
    DOUBLEDOT       shift and go to state 46
    CHILD           shift and go to state 47
    DESCENDANT      shift and go to state 48
    ATTRIBUTE       shift and go to state 49
    SELF            shift and go to state 50
    DESCENDANT_OR_SELF shift and go to state 51
    FOLLOWING_SIBLING shift and go to state 52
    FOLLOWING       shift and go to state 53
    NAMESPACE       shift and go to state 54
    @               shift and go to state 55
    *               shift and go to state 13
    ELEMENT         shift and go to state 61
    NODE            shift and go to state 62

    path                           shift and go to state 1
    Expr                           shift and go to state 2
    ExprList                       shift and go to state 3
    ExprSingle                     shift and go to state 4
    OrExpr                         shift and go to state 5
    AndExpr                        shift and go to state 6
    ComparisonExpr                 shift and go to state 7
    AdditiveExpr                   shift and go to state 8
    MultiplicativeExpr             shift and go to state 9
    UnionExpr                      shift and go to state 12
    IntersectExceptExpr            shift and go to state 14
    UnaryExpr                      shift and go to state 15
    ValueExpr                      shift and go to state 16
    RelativePathExpr               shift and go to state 18
    StepExpr                       shift and go to state 20
    PostfixExpr                    shift and go to state 21
    AxisStep                       shift and go to state 22
    PrimaryExpr                    shift and go to state 23
    ReverseStep                    shift and go to state 24
    ForwardStep                    shift and go to state 25
    Literal                        shift and go to state 26
    VarRef                         shift and go to state 27
    ParenthesizedExpr              shift and go to state 28
    FunctionCall                   shift and go to state 30
    ReverseAxis                    shift and go to state 31
    NodeTest                       shift and go to state 32
    AbbrevReverseStep              shift and go to state 33
    ForwardAxis                    shift and go to state 34
    AbbrevForwardStep              shift and go to state 35
    KindTest                       shift and go to state 56
    NameTest                       shift and go to state 57
    ElementTest                    shift and go to state 58
    AttributeTest                  shift and go to state 59
    AnyKindTest                    shift and go to state 60

state 1

    (0) S' -> path .



state 2

    (1) path -> Expr .

    $end            reduce using rule 1 (path -> Expr .)


state 3

    (2) Expr -> ExprList .
    (4) ExprList -> ExprList . , ExprSingle

  ! shift/reduce conflict for , resolved as shift
    $end            reduce using rule 2 (Expr -> ExprList .)
    )               reduce using rule 2 (Expr -> ExprList .)
    ]               reduce using rule 2 (Expr -> ExprList .)
    ,               shift and go to state 63

  ! ,               [ reduce using rule 2 (Expr -> ExprList .) ]


state 4

    (3) ExprList -> ExprSingle .

    ,               reduce using rule 3 (ExprList -> ExprSingle .)
    $end            reduce using rule 3 (ExprList -> ExprSingle .)
    )               reduce using rule 3 (ExprList -> ExprSingle .)
    ]               reduce using rule 3 (ExprList -> ExprSingle .)


state 5

    (5) ExprSingle -> OrExpr .

    ,               reduce using rule 5 (ExprSingle -> OrExpr .)
    $end            reduce using rule 5 (ExprSingle -> OrExpr .)
    )               reduce using rule 5 (ExprSingle -> OrExpr .)
    ]               reduce using rule 5 (ExprSingle -> OrExpr .)


state 6

    (6) OrExpr -> AndExpr . OR AndExpr
    (7) OrExpr -> AndExpr .

    OR              shift and go to state 64
    ,               reduce using rule 7 (OrExpr -> AndExpr .)
    $end            reduce using rule 7 (OrExpr -> AndExpr .)
    )               reduce using rule 7 (OrExpr -> AndExpr .)
    ]               reduce using rule 7 (OrExpr -> AndExpr .)


state 7

    (8) AndExpr -> ComparisonExpr . AND ComparisonExpr
    (9) AndExpr -> ComparisonExpr .

    AND             shift and go to state 65
    OR              reduce using rule 9 (AndExpr -> ComparisonExpr .)
    ,               reduce using rule 9 (AndExpr -> ComparisonExpr .)
    $end            reduce using rule 9 (AndExpr -> ComparisonExpr .)
    )               reduce using rule 9 (AndExpr -> ComparisonExpr .)
    ]               reduce using rule 9 (AndExpr -> ComparisonExpr .)


state 8

    (10) ComparisonExpr -> AdditiveExpr . ValueComp AdditiveExpr
    (11) ComparisonExpr -> AdditiveExpr . NodeComp AdditiveExpr
    (12) ComparisonExpr -> AdditiveExpr .
    (13) ValueComp -> . EQstr
    (14) ValueComp -> . NEstr
    (15) ValueComp -> . LTstr
    (16) ValueComp -> . LEstr
    (17) ValueComp -> . GTstr
    (18) ValueComp -> . GEstr
    (19) ValueComp -> . EQsym
    (20) ValueComp -> . NEsym
    (21) ValueComp -> . LTsym
    (22) ValueComp -> . LEsym
    (23) ValueComp -> . GTsym
    (24) ValueComp -> . GEsym
    (25) NodeComp -> . IS

    AND             reduce using rule 12 (ComparisonExpr -> AdditiveExpr .)
    OR              reduce using rule 12 (ComparisonExpr -> AdditiveExpr .)
    ,               reduce using rule 12 (ComparisonExpr -> AdditiveExpr .)
    $end            reduce using rule 12 (ComparisonExpr -> AdditiveExpr .)
    )               reduce using rule 12 (ComparisonExpr -> AdditiveExpr .)
    ]               reduce using rule 12 (ComparisonExpr -> AdditiveExpr .)
    EQstr           shift and go to state 68
    NEstr           shift and go to state 69
    LTstr           shift and go to state 70
    LEstr           shift and go to state 71
    GTstr           shift and go to state 72
    GEstr           shift and go to state 73
    EQsym           shift and go to state 74
    NEsym           shift and go to state 75
    LTsym           shift and go to state 76
    LEsym           shift and go to state 77
    GTsym           shift and go to state 78
    GEsym           shift and go to state 79
    IS              shift and go to state 80

    ValueComp                      shift and go to state 66
    NodeComp                       shift and go to state 67

state 9

    (26) AdditiveExpr -> MultiplicativeExpr . + MultiplicativeExpr
    (27) AdditiveExpr -> MultiplicativeExpr . - MultiplicativeExpr
    (28) AdditiveExpr -> MultiplicativeExpr .
